--- a/data/stories/stories.yml
+++ b/data/stories/stories.yml
@@ -2,80 +2,7 @@ version: "2.0"
 
 stories:
 
-#- story: search transactions switch to transfer money
-#  steps:
-#  - or:
-#    - intent: search_transactions
-#    - intent: check_earnings
-#  - action: transact_search_form
-#  - active_loop: transact_search_form
-#  - intent: transfer_money
-#  - action: utter_ask_switch_goal
-#  - intent: affirm
-#  - action: transfer_form
-#  - active_loop: transfer_form
-#  - active_loop: null
-#  - action: utter_ask_back_to_transact
-#  - intent: affirm
-#  - action: transact_search_form
-#  - active_loop: transact_search_form
-#  - active_loop: null
-#- story: search transactions switch to transfer money, deny
-#  steps:
-#  - or:
-#    - intent: search_transactions
-#    - intent: check_earnings
-#  - action: transact_search_form
-#  - active_loop: transact_search_form
-#  - intent: transfer_money
-#  - action: utter_ask_switch_goal
-#  - intent: deny
-#  - action: transact_search_form
-#  - active_loop: transact_search_form
-#  - active_loop: null
-#- story: search transactions switch to transfer money, don't continue transactions
-#  steps:
-#  - or:
-#    - intent: search_transactions
-#    - intent: check_earnings
-#  - action: transact_search_form
-#  - active_loop: transact_search_form
-#  - intent: transfer_money
-#  - action: utter_ask_switch_goal
-#  - intent: affirm
-#  - action: transfer_form
-#  - active_loop: transfer_form
-#  - active_loop: null
-#  - action: utter_ask_back_to_transact
-#  - intent: deny
-#  - action: utter_ok
-
-
-#- story: Transfer money pay credit card
-#  steps:
-#  - intent: transfer_money
-#  - action: transfer_form
-#  - active_loop: transfer_form
-#  - intent: pay_cc
-#  - action: cc_payment_form
-#  - active_loop: cc_payment_form
-#  - active_loop: null
-#  - action: utter_ask_back_to_transfer
-#  - intent: affirm
-#  - action: transfer_form
-#  - active_loop: transfer_form
-#  - active_loop: null
-#- story: Transfer money pay credit card
-#  steps:
-#  - intent: transfer_money
-#  - action: transfer_form
-#  - active_loop: transfer_form
-#  - intent: pay_cc
-#  - action: cc_payment_form
-#  - active_loop: cc_payment_form
-#  - active_loop: null
-#  - action: utter_ask_back_to_transfer
-#  - intent: deny
-#  - action: utter_ok
-#
-
+- story: utter_ok after an affirm
+  steps:
+  - intent: affirm
+  - action: utter_ok
