--- a/data/stories/stories_handoff.yml
+++ b/data/stories/stories_handoff.yml
@@ -3,31 +3,31 @@ stories:
 #
 # TODO: All of these must be converted still into possible rules...
 #
-- story: handoff
-  steps:
-  - checkpoint: STORY_START
-  - intent: human_handoff
-  - action: utter_ask_handoff
-  - action: action_handoff_options
-  - intent: trigger_handoff
-  - action: action_handoff
-- story: handoff
-  steps:
-  - checkpoint: STORY_START
-  - intent: human_handoff
-  - action: utter_ask_handoff
-  - action: action_handoff_options
-  - intent: trigger_handoff
-    user: |-
-      trigger_handoff{"handoff_to":"financial_demo"}
-    entities:
-    - handoff_to: financial_demo
-  - action: action_handoff
-- story: handoff deny
-  steps:
-  - checkpoint: STORY_START
-  - intent: human_handoff
-  - action: utter_ask_handoff
-  - action: action_handoff_options
-  - intent: deny
-  - action: utter_ask_whatelse
+#- story: handoff
+#  steps:
+#  - checkpoint: STORY_START
+#  - intent: human_handoff
+#  - action: utter_ask_handoff
+#  - action: action_handoff_options
+#  - intent: trigger_handoff
+#  - action: action_handoff
+#- story: handoff
+#  steps:
+#  - checkpoint: STORY_START
+#  - intent: human_handoff
+#  - action: utter_ask_handoff
+#  - action: action_handoff_options
+#  - intent: trigger_handoff
+#    user: |-
+#      trigger_handoff{"handoff_to":"financial_demo"}
+#    entities:
+#    - handoff_to: financial_demo
+#  - action: action_handoff
+#- story: handoff deny
+#  steps:
+#  - checkpoint: STORY_START
+#  - intent: human_handoff
+#  - action: utter_ask_handoff
+#  - action: action_handoff_options
+#  - intent: deny
+#  - action: utter_ask_whatelse
