--- a/data/rules/rules_handoff.yml
+++ b/data/rules/rules_handoff.yml
@@ -2,10 +2,10 @@ version: "2.0"
 
 rules:
 
-- rule: Greet user upon handoff from another bot
+- rule: Handoff intent from other bot's handoff triggers greeting
   steps:
-  - intent: handoff
-  - action: utter_greet
+    - intent: handoff
+    - action: utter_greet
   
 - rule: Provide handoff options
   steps:
